# forky

./: .gitignore  Cargo.toml  FORKY-RESEARCH.md  README.md
.claude/: current-session.json  sessions.jsonl
.claude-plugin/: plugin.json
.claude/mod-claude/: forky.db
commands/: forky.md
forky/: .gitignore  Cargo.toml  NEXT-SESSION.md  skills.md
forky/plugin/: hooks.json  plugin.json
forky/plugin/commands/: forky.md
forky/plugin/skills/forky/: SKILL.md
forky/src/: main.rs  names.rs
forky/src/claude/: events.rs  mod.rs  spawn.rs
forky/src/cli/: args.rs  commands.rs  mod.rs
forky/src/db/: connection.rs  graph.rs  mod.rs  queries.rs
forky/src/models/: fork.rs  job.rs  message.rs  mod.rs  session.rs
forky/src/process/: mod.rs  pool.rs  spawn.rs
forky/src/server/: mod.rs  ui.html
forky/src/session/: detect.rs  mod.rs
hooks/: check-fork-notifications.sh  hooks.json  inject-session.sh
skills/forky/: SKILL.md
